[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Question.gd" type="Script" id=1]

[node name="Question" type="HBoxContainer"]
margin_top = 38.0
margin_right = 600.0
margin_bottom = 126.0
size_flags_horizontal = 7
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionContainer" type="VBoxContainer" parent="."]
margin_right = 298.0
margin_bottom = 88.0
size_flags_horizontal = 3

[node name="QuestionNoLabel" type="Label" parent="QuestionContainer"]
margin_right = 298.0
margin_bottom = 14.0
text = "Question#1"

[node name="QuestionInput" type="LineEdit" parent="QuestionContainer"]
margin_top = 18.0
margin_right = 298.0
margin_bottom = 42.0
caret_blink = true
caret_blink_speed = 0.5

[node name="AnswerContainer" type="VBoxContainer" parent="."]
margin_left = 302.0
margin_right = 600.0
margin_bottom = 88.0
size_flags_horizontal = 3

[node name="AnswersLabel" type="Label" parent="AnswerContainer"]
margin_right = 298.0
margin_bottom = 14.0
text = "Answer:"

[node name="AnswerInput" type="LineEdit" parent="AnswerContainer"]
margin_top = 18.0
margin_right = 298.0
margin_bottom = 42.0
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5
